--- a/css/common.css
+++ b/css/common.css
@@ -199,7 +199,7 @@
   }
 
   .container .nav .logo img {
-    height: 70px;
+    height: 55px;
     margin: 0 25px;
   }
 
@@ -229,15 +229,8 @@
 
   .contact {
     margin: 50px auto;
-    width: 65%;
+    width: 80vw;
     height: 200px;
-    display: grid;
-    grid-template-columns: 1fr 2.5fr;
-    grid-template-rows: 1fr 1fr;
-  }
-
-  #logo {
-    grid-area: 1 / 1 / span 2 / span 1;
   }
 
   #logo img {
@@ -245,33 +238,30 @@
   }
 
   #phone {
-    grid-area: 1 / 2 / span 1 / span 1;
     transition: ease-in-out 0.2s;
   }
 
   #phone:hover {
-    /* background-color: rgb(22, 167, 142); */
     text-shadow: 3px 3px 0 #db296d;
     transition: 0.2s ease-in-out;
   }
 
   #mail {
-    grid-area: 2 / 2 / span 1 / span 1;
     transition: ease-in-out 0.2s;
   }
 
   #mail:hover {
-    /* background-color: rgb(22, 162, 167); */
     text-shadow: 3px 3px 0 #db296d;
     transition: 0.2s ease-in-out;
   }
 
   .contact div {
-    /* padding: 39px; */
     line-height: 1.3;
     font-size: 25px;
     font-weight: 700;
     color: white;
+    /* background-color: lightblue; */
+    margin: 20px 0;
   }
 
   .contact div span {
