--- a/css/index.css
+++ b/css/index.css
@@ -309,11 +309,11 @@
   }
 
   .container .activity {
-    width: 100%;
+    width: 90%;
     height: 400px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, 80px);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     background-color: rgba(255, 255, 255, 0.3);
   }
 
@@ -322,20 +322,21 @@
 } */
 
   .container .activity .work1 {
-    grid-area: 1/1 / span 4 / span 1;
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1QPV2ahgaqPhotpDreK7NSh7G3vb85vzBPvnXD5rVkud0a*ork*huQxOynmkUQQfEbEChkoL9jwfSjLDmv7XgK4!/r");
     background-size: 100%;
+    background-repeat: no-repeat;
     background-position: center;
-    transition: linear 0.2s;
+    transition: ease-in-out 0.2s;
+    height: 180px;
   }
 
   .container .activity .work2 {
-    grid-area: 1/2 / span 4 / span 1;
-    /* background-color: rgb(62, 218, 176); */
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1ULntNdQeG2GGiRxHmLeo.z1NDDdMvYGwQqU2xpwKxhXn1*GEtyVDbmtkxkkyr7LwRUJH7RPmkOKhNAL6FUpjLA!/r");
     background-size: 100%;
+    background-repeat: no-repeat;
     background-position: center;
-    transition: linear 0.2s;
+    transition: ease-in-out 0.2s;
+    height: 180px;
   }
 
   .container .activity .work1:hover,
@@ -371,20 +372,20 @@
   }
 
   .container .activity .moreWork {
-    grid-area: 5/1 / span 1 / span 2;
     background-color: #262626;
-    line-height: 80px;
+    height: 48px;
+    line-height: 48px;
     color: rgba(255, 255, 255, 0.6);
     text-align: right;
-    font-size: 35px;
-    padding-right: 25px;
+    font-size: 24px;
+    padding-right: 12px;
     box-sizing: border-box;
     font-weight: 300;
     transition: ease-in-out 0.2s;
   }
 
   .container .activity .moreWork i {
-    font-size: 35px;
+    font-size: 24px;
     font-weight: 900;
   }
 
@@ -395,36 +396,34 @@
   }
 
   .container .blog {
-    margin: 300px 0;
-    width: 100%;
-    height: 450px;
-    display: grid;
-    grid-template-columns: 3fr 3fr 2fr;
-    grid-template-rows: 1fr;
-    grid-gap: 10px;
+    margin: 300px auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
     box-sizing: content-box;
   }
 
   .container .blog .blogItem1 {
-    grid-area: 1/1 / span 1 / span 1;
-    background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZougtTlL*2MMSL4DDBaKW28cIXKUmYd08cBzs5ccLCGq9jQTTtt9A6kVUHIg33Ie.hf*btGzGzWZd5*kmapMQU!/r");
+    background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZougtTlL*2MMSL4DDBaKW28cIXKUmYd08cBzs5ccLCGq9jQTTtt9A6kVUHIg33Ie.hf*btGzGzWZd5*kmapMQU!/r")
+      no-repeat;
     background-position: center 125%;
     background-size: 250%;
     display: relative;
-    height: 450px;
+    height: 320px;
+    margin: 5px 0;
   }
 
   .container .blog .blogItem2 {
-    grid-area: 1/2 / span 1 / span 1;
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r")
       no-repeat;
     background-size: 320%;
     background-position: center;
-    height: 450px;
+    height: 320px;
+    margin: 5px 0;
   }
 
   .blog .blogIntro {
-    height: 225px;
+    height: 50%;
     width: 100%;
     background-color: #262626;
     padding: 20px;
@@ -447,11 +446,11 @@
 } */
 
   .blog .blogIntro .blogTitle {
-    font-size: 35px;
+    font-size: 28px;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.8);
-    margin-bottom: 20px;
-    line-height: 1.2;
+    /* margin-bottom: 20px; */
+    line-height: 1.5;
   }
 
   .blog .blogIntro span {
@@ -465,12 +464,13 @@
   .blog .moreBlog {
     background-color: #262626;
     color: rgba(255, 255, 255, 0.6);
-    font-size: 35px;
+    font-size: 24px;
     font-weight: 300;
-    padding-top: 20px;
-    height: 450px;
+    padding-right: 12px;
+    height: 48px;
+    line-height: 48px;
     box-sizing: border-box;
-    text-align: center;
+    text-align: right;
     transition: ease-in-out 0.2s;
   }
 
@@ -481,24 +481,21 @@
   }
 
   .blog .moreBlog i {
-    font-size: 35px;
+    font-size: 24px;
     font-weight: 900;
   }
 
   .about {
     width: 100%;
     height: 700px;
-    display: grid;
-    grid-template-columns: 3.5fr 5.5fr 4fr;
-    grid-template-rows: 4.5fr 5.5fr;
-    grid-gap: 0;
-
+    display: flex;
+    flex-direction: column;
     margin-bottom: 200px;
   }
 
   .about .aboutItem {
     color: rgb(255, 255, 255);
-    font-size: 65px;
+    font-size: 48px;
     font-weight: 700;
     font-style: normal;
     line-height: 1.3;
@@ -508,7 +505,7 @@
   }
 
   .about .aboutItem span {
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 500;
     font-style: italic;
     line-height: 1.5;
@@ -517,20 +514,17 @@
   }
 
   .about #name {
-    grid-area: 1 / 1 / span 2 / span 1;
-    /* background-image: url("../images/WechatIMG1-01.jpg"); */
   }
 
   .about #name:hover {
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1am0d6eHt*WjKuc4CY.Pr61Y5zX4cxSRy8Bu2mM3FBN3Ox5Pw8vYIlYbFh7NuZbfPn3QZ5HxSN4lEGf23B*92fE!/r");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 20% -10%;
+    background-size: 120%;
+    background-position-y: 30%;
     transition: 1s ease-in-out;
   }
 
   .about #address {
-    grid-area: 1 / 2 / span 1 / span 1;
   }
 
   .about #address:hover {
@@ -542,26 +536,23 @@
   }
 
   .about #school {
-    grid-area: 2 / 2 / span 1 / span 1;
   }
 
   .about #school:hover {
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1WqU94JLDDV2Gnp4P.QxhszLspmPxL3ByPd.x6XoyTCLIw7GckDlaEDambM4tXLHt7LTH4LUZ5TzESAdGb12pZU!/r");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 125%;
     background-position-x: 50%;
     transition: 1s ease-in-out;
   }
 
   .about #hobby {
-    position: relative;
-    grid-area: 1 / 3 / span 2 / span 1;
   }
 
   .about #hobby:hover {
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3kRdes/jASqEt644m*KNERKGtvN1VbAxCSfaNXJimPyN69ezp4jlPBdRRBPgUshhvTaFMjrbzNPqLmBlbDHbTxhaRMDjwf*0w6oSjCdf.ytpuSwGS4!/r");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 120%;
     background-position-x: 50%;
     /* opacity: 1; */
     transition: 1s ease-in-out;
