--- a/css/workDetail.css
+++ b/css/workDetail.css
@@ -8,7 +8,7 @@
     height: 500px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3l9oZB/jASqEt644m*KNERKGtvN1auyrsMuS63lAOjMrSEHlBq4X0L5Pxuk5XEoijxDffbO9N46C1SPxnqiVmVPZph.7gnQVT4jALCBYWTQHGB10PE!/r");
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: -20px;
     background-position-x: center;
@@ -23,7 +23,7 @@
     height: 500px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2sSSoy/jASqEt644m*KNERKGtvN1TyYp4nih0izSPa4Er1eZF3cQSi0gE0HI9DJMoRdVOVl2IO.tbQY6wOKoo2s.1ANVleseu3tuJu7rfuv*MY9FqM!/r");
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: 0px;
     background-position-x: center;
@@ -38,7 +38,7 @@
     height: 500px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: 0;
     background-position-x: center;
@@ -54,7 +54,7 @@
     /* background-color: teal; */
     /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1bxGmlRDxCg7uJn8CqxiiefNFANJADPvm4cBalldC*52rh6a1sspgDkEaX9rku4kcv072*m7avMdxFUTLEEHw9k!/r"); */
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1YjLHbuE*UtOxvbfzQ6ngo7uFcfpdfawpSZ1azgKTw.XGVrUT5TX.kj0qUJDBxxdjtfyr3rHoaUrZStYlxkIOtU!/r");
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: -40px;
     background-position-x: center;
@@ -70,7 +70,7 @@
     /* background-color: teal; */
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
     /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: -20px;
     background-position-x: center;
@@ -86,7 +86,7 @@
     /* background-color: teal; */
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
     /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-    background-attachment: fixed;
+
     background-repeat: no-repeat;
     background-position-y: -20px;
     background-position-x: center;
@@ -143,6 +143,9 @@
     background-size: contain;
     background-position: center;
     margin: 10px 0;
+  }
+  .content .pic img {
+    width: 1152px;
   }
 
   img {
@@ -205,14 +208,13 @@
 @media only screen and (max-width: 520px) {
   .bbg {
     width: 100%;
-    height: 500px;
+    height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q3l9oZB/jASqEt644m*KNERKGtvN1auyrsMuS63lAOjMrSEHlBq4X0L5Pxuk5XEoijxDffbO9N46C1SPxnqiVmVPZph.7gnQVT4jALCBYWTQHGB10PE!/r");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: -20px;
+
     background-position-x: center;
-    background-size: 110%;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -220,14 +222,12 @@
 
   .bbg2 {
     width: 100%;
-    height: 500px;
+    height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2sSSoy/jASqEt644m*KNERKGtvN1TyYp4nih0izSPa4Er1eZF3cQSi0gE0HI9DJMoRdVOVl2IO.tbQY6wOKoo2s.1ANVleseu3tuJu7rfuv*MY9FqM!/r");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: 0px;
     background-position-x: center;
-    background-size: 100%;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -235,14 +235,11 @@
 
   .bbg3 {
     width: 100%;
-    height: 500px;
-    /* background-color: teal; */
+    height: 280px;
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q4bsQkq/jASqEt644m*KNERKGtvN1YkBH4Tta1fGwBZwdOCP5gigI3.cibYjjrWumQu0wg1aI8EjKi5g4mGoWtR9F7hOHAjKKqqT5oF9Q6p*icDDcjg!/r");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: 0;
     background-position-x: center;
-    background-size: 100%;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -250,15 +247,11 @@
 
   .bbg4 {
     width: 100%;
-    height: 500px;
-    /* background-color: teal; */
-    /* background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1bxGmlRDxCg7uJn8CqxiiefNFANJADPvm4cBalldC*52rh6a1sspgDkEaX9rku4kcv072*m7avMdxFUTLEEHw9k!/r"); */
+    height: 280px;
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2blVad/jASqEt644m*KNERKGtvN1YjLHbuE*UtOxvbfzQ6ngo7uFcfpdfawpSZ1azgKTw.XGVrUT5TX.kj0qUJDBxxdjtfyr3rHoaUrZStYlxkIOtU!/r");
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: 0px;
-    background-position-x: -245px;
-    background-size: 75%;
+    background-position-x: center;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -266,15 +259,11 @@
 
   .bbg5 {
     width: 100%;
-    height: 500px;
-    /* background-color: teal; */
+    height: 280px;
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1UVATWV5G.8EYzzQYhvjlPjBhXbMDtQCbFEntn35cPNKscEuax6RbGP3fVF1FS5MmD1ZY0g7Y3a9AJ1FMrEKgSI!/r");
-    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: -20px;
     background-position-x: center;
-    background-size: 110%;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -282,15 +271,11 @@
 
   .bbg6 {
     width: 100%;
-    height: 500px;
-    /* background-color: teal; */
+    height: 280px;
     background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q0GNhTs/jASqEt644m*KNERKGtvN1X.9lWJFcVbcomBVSNQP*6C11J5SEyxx3VWBA6gOL5sw9xt4If9U99cTQ6OZn3Fw8w61haIDZTjhnkt*.rGjSto!/r");
-    /* background-image: url("http://r.photo.store.qq.com/psc?/V11TKo8Q2AzwgM/jASqEt644m*KNERKGtvN1S5GsAcjN9dY*Qh5YyEEjG5tYjaPBfSMsoogCLG6BfcVgPewJyAoMBe72dfeiuZhEoqHGZenSdOzxCPU0dgyviY!/r"); */
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position-y: -20px;
     background-position-x: center;
-    background-size: 110%;
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -309,7 +294,7 @@
   }
 
   .title span {
-    margin: 20px 0;
+    margin: 6px 0;
     display: block;
     font-size: 15px;
     font-weight: 300;
@@ -317,14 +302,14 @@
   }
 
   .content {
-    width: 200%;
+    width: 100%;
 
     line-height: 1.7;
     font-size: 24px;
     font-weight: 500;
     color: rgb(221, 221, 221);
-    margin: 200px auto;
-    margin-bottom: 150px;
+    margin: 165px auto;
+    margin-bottom: 70px;
     /* background-color: rgba(50, 50, 50, 0.658); */
   }
 
@@ -346,14 +331,19 @@
     margin: 10px 0;
   }
 
+  .content .pic img {
+    width: 100%;
+    margin: 2px 0;
+  }
+  /* 
   img {
     margin: 20px 0;
-  }
+  } */
 
   .pager {
     width: 100%;
     height: 200px;
-    margin-bottom: 200px;
+    margin-bottom: 70px;
     display: grid;
     grid-template-rows: 200px;
     grid-template-columns: 50% 50%;
