--- a/css/common.css
+++ b/css/common.css
@@ -145,7 +145,7 @@
   body {
     background-color: #111;
     padding: 30px 0;
-    /* min-width: 1400px; */
+    width: 100vw;
     font-family: "IBM Plex Sans", sans-serif;
   }
 
@@ -153,8 +153,6 @@
     margin-top: 20px;
     width: 100%;
     margin: 0 auto;
-    /* background-color: rgba(255, 255, 255, .3); */
-    /* height: 750px; */
   }
 
   .container .nav {
