--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -171,59 +171,59 @@
   }
 
   .bbg {
-    width: 200%;
+    width: 100%;
     height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1RGNxMGXsfriEnSiuLX9.wqPSNzciA3fJItx6FjTihc.*S9GJoZzQeclp3bsnb3B8C0DTrPfYEsg4344yblZI0k!/r");
 
     background-repeat: no-repeat;
     background-position-y: 0px;
-    background-position-x: -225px;
-    background-size: cover;
+    background-position-x: center;
+    background-size: 200%;
     position: absolute;
     top: 0;
     left: 0;
   }
 
   .bbg2 {
-    width: 220%;
+    width: 100%;
     height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1R3L7r2c5mwiXaW.h*4sOnUmMfHgjSKgWYhw1PWMhaAI5a8bSMa20EBzWmwYTmW2.fvssrSI9PulMTuCxwLXO8s!/r");
 
     background-repeat: no-repeat;
 
-    background-position-x: -82px;
-    background-size: contain;
+    background-position-x: center;
+    background-size: 200%;
     position: absolute;
     top: 0;
     left: 0;
   }
 
   .bbg3 {
-    width: 305%;
+    width: 100%;
     height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ajCNe7y.qtDOZM3AQNz49oS*lXvBM1Zw5.3rywafDx3ZE0MDVBF3sNsv*v0vaTv0bGZDZIZb3VQ321ZdGfqscQ!/r");
 
     background-repeat: no-repeat;
-    background-position-y: -115px;
-    background-position-x: -380px;
-    background-size: cover;
+    background-position-y: -180px;
+    background-position-x: center;
+    background-size: 350%;
     position: absolute;
     top: 0;
     left: 0;
   }
 
   .bbg4 {
-    width: 228%;
+    width: 100%;
     height: 280px;
     /* background-color: teal; */
     background: url("http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1ZougtTlL*2MMSL4DDBaKW28cIXKUmYd08cBzs5ccLCGq9jQTTtt9A6kVUHIg33Ie.hf*btGzGzWZd5*kmapMQU!/r");
 
     background-repeat: no-repeat;
-    background-position-x: -220px;
-    background-size: contain;
+    background-position-x: center;
+    background-size: 200%;
     position: absolute;
     top: 0;
     left: 0;
