--- a/css/blogDetail.css
+++ b/css/blogDetail.css
@@ -124,18 +124,14 @@
   .pager a {
     padding: 30px;
     box-sizing: border-box;
-    background-color: #262626;
+    background-color: rgba(38, 38, 38, 0.426);
+    backdrop-filter: blur(5px);
     font-size: 20px;
     font-weight: 300;
     transition: 0.2s ease-in-out;
     color: rgba(255, 255, 255, 0.726);
     cursor: pointer;
   }
-
-  /* .pager a:first-of-type:hover{
-    background-image: url("../images/douban.jpg");
-    transition: .2s ease-in-out;
-} */
 
   .pager a span {
     margin-top: 20px;
@@ -150,7 +146,7 @@
   .pager a:hover {
     font-size: 20px;
     font-weight: 300;
-    background-color: #373737;
+    background-color: #262626;
     color: white;
     transition: 0.2s ease-in-out;
     cursor: pointer;
@@ -288,7 +284,8 @@
   .pager a {
     padding: 18px;
     box-sizing: border-box;
-    background-color: #262626;
+    background-color: rgba(41, 41, 41, 0.426);
+    backdrop-filter: blur(20px);
     font-size: 15px;
     font-weight: 300;
     transition: 0.2s ease-in-out;
